feat: crud api items
